# Secure-IoT-Device-Onboarding-Portal

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
certs/: .gitkeep
certs/devices/: .gitkeep
data/: .gitkeep
docs/: api.md  architecture.md  documentation-index.md  learning.md  mqtt-security.md  pki-fundamentals.md  production-deployment.md  threat-modeling.md  usage.md
logs/: .gitkeep
src/secure_iot_onboarding/: app.py  broker_provisioning.py  ca.py  cli.py  credential_delivery.py  db.py
tests/: test_app.py  test_broker_provisioning.py  test_ca.py  test_cli.py  test_credential_delivery.py  test_db.py  test_integration.py
