[tool.poetry]
name = "secure-iot-device-onboarding-portal"
version = "0.1.0"
description = "Secure IoT Device Onboarding Portal: certificate issuance, device registry, MQTT mTLS provisioning"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "secure_iot_onboarding", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
flask = "^3.0.0"
cryptography = "^42.0.0"
sqlalchemy = "^2.0.0"
paho-mqtt = "^1.6.0"
click = "^8.1.0"
pyzipper = "^0.3.6"
requests = "^2.31.0"
tabulate = "^0.9.0"
pydantic = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.11.0"
pytest-cov = "^5.0.0"
flake8 = "^7.0.0"

[tool.poetry.scripts]
secure-iot-onboarding = "secure_iot_onboarding.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
